style(gh-proxy): 为标题添加背景渐变文本效果
添加 background-clip 属性以完善标题的渐变文本效果，确保在不同浏览器中显示一致

--- a/static-pages/gh-proxy.html
+++ b/static-pages/gh-proxy.html
@@ -53,6 +53,7 @@
             font-weight: 600;
             margin-bottom: 1rem;
             background: linear-gradient(45deg, #cdd5dd, #e2e8f0);
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
